--- a/kov-spa/src/app/game/home-logged/home-logged.component.html
+++ b/kov-spa/src/app/game/home-logged/home-logged.component.html
@@ -24,7 +24,7 @@
            src="/assets/img/market.jpeg"
            alt="Market" width="200" height="200">
       <h2>Market</h2>
-      <p>The Market is where you can buy new items. You can find great deals for weapons, armour and shields. Some
+      <p>The Market is where you can buy new items. You can find great deals for weapons, armor and shields. Some
         offers do not last very long.</p>
       <p><a class="btn btn-secondary" href="/game/market" role="button">Go to Market &raquo;</a></p>
     </div>
