--- a/kov-spa/src/app/game/market/market.component.html
+++ b/kov-spa/src/app/game/market/market.component.html
@@ -11,81 +11,36 @@
 
     <div class="text-center">
       <div class="filters my-5">
-        <button type="button" class="btn btn-secondary">Weapons</button>
-        <button type="button" class="btn btn-secondary">Armour</button>
-        <button type="button" class="btn btn-secondary">Shields</button>
+        <button type="button" (click)="findItemsByType('Weapon')" class="btn btn-secondary">Weapons</button>
+        <button type="button" (click)="findItemsByType('Armor')" class="btn btn-secondary">Armor</button>
+        <button type="button" (click)="findItemsByType('Shield')" class="btn btn-secondary">Shields</button>
+        <button type="button" (click)="findItemsByType(null)" class="btn btn-secondary">All</button>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+          <input #searchQuery class="form-control mr-sm-2" type="text" placeholder="Search">
+          <button class="btn btn-secondary my-2 my-sm-0" (click)="findItemsByType(searchQuery.value)">Search</button>
         </form>
       </div>
     </div>
 
     <div class="row">
 
-      <div class="col-md-6 col-lg-4">
+      <div *ngFor="let item of items" class="col-md-6 col-lg-4">
         <div class="card item mb-4 box-shadow">
-          <img class="card-img-top" src="./assets/img/tmp/shield.png"
-               alt="Some shield">
+          <img class="card-img-top" src="{{item.image}}"
+               alt="{{item.name}}">
           <div class="card-body">
-            <p class="card-text text-center">Shield of gold</p>
+            <p class="card-text text-center">{{item.name}}</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-light">Buy</button>
+                <button type="button" (click)="buyItem(item.id)" class="btn btn-sm btn-outline-light">Buy</button>
               </div>
-              <span class="badge badge-pill badge-success">2+ Defence</span>
-              <span class="badge badge-pill badge-light">Price: 5 gold</span>
+              <span class="badge badge-pill badge-light">Price: {{item.price}} gold</span>
             </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-4">
-        <div class="card item mb-4 box-shadow">
-          <img class="card-img-top" src="./assets/img/tmp/shield.png"
-               alt="Some shield">
-          <div class="card-body">
-            <p class="card-text text-center">Shield of gold</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-light">Buy</button>
-              </div>
-              <span class="badge badge-pill badge-success">2+ Defence</span>
-              <span class="badge badge-pill badge-light">Price: 1 gold</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-4">
-        <div class="card item mb-4 box-shadow">
-          <img class="card-img-top" src="./assets/img/tmp/sword.png"
-               alt="Some shield">
-          <div class="card-body">
-            <p class="card-text text-center">Dagger of gold</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-light">Buy</button>
-              </div>
-              <span class="badge badge-pill badge-success">6+ Strength</span>
-              <span class="badge badge-pill badge-light">Price: 3 gold</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-4">
-        <div class="card item mb-4 box-shadow">
-          <img class="card-img-top" src="./assets/img/tmp/armour.png"
-               alt="Some shield">
-          <div class="card-body">
-            <p class="card-text text-center">Armour of gold</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-light">Buy</button>
-              </div>
-              <span class="badge badge-pill badge-success">2+ Stamina</span>
-              <span class="badge badge-pill badge-light">Price: 15 gold</span>
+            <div class="item-params">
+              <span *ngIf="item.type=='Weapon'" class="badge badge-pill badge-success">{{item.bonus}}+ Attack</span>
+              <span *ngIf="item.type=='Shield'" class="badge badge-pill badge-success">{{item.bonus}}+ Defense</span>
+              <span *ngIf="item.type=='Armor'" class="badge badge-pill badge-success">{{item.bonus}}+ Defense</span>
+              <span *ngIf="item.type=='Armor'" class="badge badge-pill badge-success">{{getStaminaOfItem(item)}}+ Stamina</span>
             </div>
           </div>
         </div>
@@ -93,15 +48,16 @@
 
     </div>
 
-    <div class="text-center">
+    <div class="text-center my-5">
       <ul class="paging">
-        <li class="page-item disabled">
-          <a class="page-link" href="#">&laquo;</a>
+        <li class="page-item" [ngClass]="{'disabled': prevDisabled}">
+          <button (click)="prevPage()" class="page-link">&laquo;</button>
         </li>
-        <li class="page-item">
-          <a class="page-link" href="#">&raquo;</a>
+        <li class="page-item" [ngClass]="{'disabled': nextDisabled}">
+          <button (click)="nextPage()" class="page-link">&raquo;</button>
         </li>
       </ul>
     </div>
+
   </div>
 </div>
