--- a/kov-spa/src/app/game/market/market.component.scss
+++ b/kov-spa/src/app/game/market/market.component.scss
@@ -4,6 +4,11 @@
 
   img {
     width: 100%;
-    max-height: 225px;
+    height: 270px;
+  }
+
+  .item-params{
+    margin-top: 20px;
+    text-align: center;
   }
 }
