--- a/kov-spa/src/app/game/game.component.scss
+++ b/kov-spa/src/app/game/game.component.scss
@@ -23,7 +23,7 @@
   transition: max-height 0.35s ease;
   max-height: 0px;
 
-  ul li a{
+  ul li a {
     font-size: 18px;
   }
 
@@ -49,15 +49,27 @@
   }
 }
 
-
 .filters form {
   display: inline-block;
   margin-left: 100px;
 }
 
-
 footer {
   margin-top: 50px;
 }
 
+.card.item {
+
+  padding: 10px;
+
+  img {
+    width: 100%;
+    height: 270px;
+  }
+
+  .item-params{
+    margin-top: 20px;
+    text-align: center;
+  }
+}
 
