--- a/kov-spa/src/app/game/wilderness/wilderness.component.scss
+++ b/kov-spa/src/app/game/wilderness/wilderness.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../src/assets/theme/variables";
+
 .card.neutral-unit {
 
   padding: 10px;
@@ -5,6 +7,10 @@
   img {
     width: 100%;
     height: 300px;
+  }
+
+  &.special{
+    border: 1px solid $danger;
   }
 }
 
@@ -19,6 +25,10 @@
       max-width: 400px;
       margin: 0px auto;
     }
+
+
   }
+
+
 
 }
