Update on Jobs functionality
And add-item validation message fix

--- a/kov-spa/src/app/admin/items/add/add-item.component.html
+++ b/kov-spa/src/app/admin/items/add/add-item.component.html
@@ -75,7 +75,8 @@
           </span>
             <ng-template #priceValidation>
             <span *ngIf="!isPriceValid(price.value)">
-              Price should be a positive integer.
+              Price should be a positive integer between {{PRICE_MIN}}
+              and {{PRICE_MAX}}.
             </span>
             </ng-template>
           </div>
